--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -37,5 +37,5 @@ build_and_push:
         context: .
         push: true
         tags: |
-          ghcr.io/${{ github.repository }}:latest
-          ghcr.io/${{ github.repository }}:1.0.0
+          ghcr.io/eiectro/todo:latest
+          ghcr.io/eiectro/todo:1.0.0
